--- a/resources/sass/frontend/_activity.scss
+++ b/resources/sass/frontend/_activity.scss
@@ -12,15 +12,23 @@
         top: -35%;
         left: 5%;
         background-color: $green;
-        .container {
-            padding-top: 5%;
-            overflow-x: hidden;
-            .slider{
+        #activity_container {
+            height: 875px;
+            padding-top: 70px;
+            overflow: hidden;
+            position: relative;
+            .slider {
                 display: flex;
-                width: 200%;
-                .activities-area{
+                width: calc(200% + 15px);
+                height: 805px;
+                position: absolute;
+                left: 0;
+                transition: all 0.5s ease;
+                .activities-area {
                     display: flex;
+                    margin-right: 15px;
                     width: 50%;
+                    height: 100%;
                     h1 {
                         letter-spacing: 20px;
                         font-weight: bold;
@@ -112,20 +120,55 @@
                         text-align: center;
                         font-size: 1.5rem;
                         letter-spacing: 3px;
-                        margin-top: 5%;
+                        margin-top: 4%;
                         padding: 17px;
+                        cursor: pointer;
                         img {
                             width: 6%;
                             margin-top: -2%;
                         }
                     }
                 }
-                .recommandation-area{
+                .recommandation-area {
                     display: flex;
                     width: 50%;
+                    background-image: url(../../images/frontend/icons/book_bg.png);
+                    background-size: 100% 80%;
+                    background-repeat: no-repeat;
+                    background-position: center;
+                    .container {
+                        padding-top: 0px !important;
+                        .bookTable {
+                            padding: 8% 5% 5% 8%;
+                            .row {
+                                background-image: url('../../images/frontend/icons/news_underline.png');
+                                background-repeat: no-repeat;
+                                background-position: bottom;
+                                padding-bottom: 10px;
+                                margin-bottom: 30px;
+                            }
+                            .bookCol {
+                                height: 225px;
+                            }
+                            img {
+                                width: 100%;
+                            }
+                        }
+                        .checkRecommendationBtn {
+                            font-size: 1.5rem;
+                            letter-spacing: 3px;
+                            margin-top: 10px;
+                            cursor: pointer;
+                            img {
+                                width: 40px;
+                            }
+                        }
+                    }
+                }
+                &.activated {
+                    left: calc(-100% - 15px);
                 }
             }
-            
         }
     }
 }
